--- a/src/components/VideoPage/VideoPage.css
+++ b/src/components/VideoPage/VideoPage.css
@@ -218,12 +218,23 @@
 	.video-card-image img {
 		width: 100%;
 	}
+	 
+	
 }
-
+@media (max-width: 576px)   {
+	 
+	 .video-slider-right-list{
+		 display: none;
+	 }
+	 .single-video-author{
+		 display: none;
+	 }
+}
 @media (min-width: 576px) and (max-width: 767.98px) {
 	.video-card-image img {
 		width: 100%;
 	}
+	 
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -235,4 +246,5 @@
 	.video-card-image img {
 		width: 100%;
 	}
+	 
 }
