--- a/src/components/Atomics/VideoCard/VideoCard.css
+++ b/src/components/Atomics/VideoCard/VideoCard.css
@@ -77,3 +77,55 @@
 .video-card-body {
 	padding: 12px;
 }
+
+/* Card Css */
+
+.card-category-items{
+    width: 100%;
+    height:  auto;
+}
+.card-category-items img {
+ 
+	width: 100px;
+    height: 50px;
+	 
+	
+	 
+}
+.card-category-items:hover img {
+	transform: scale(1.09);
+	transition-duration: 0.4s;
+}
+.card-category-items {
+	background: rgb(235, 232, 232) none repeat scroll 0 0;
+	border-radius: 2px;
+	box-shadow: 0 0 6px #ececec;
+	 
+ 
+	text-align: center;
+}
+ 
+.card-category-items h5 {
+	font-size: 10px;
+    
+	 font-weight: 900;
+    
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.card-category-items h6 {
+	font-size: 10px;
+   font-weight: 400;
+	margin: 5px 0 3px;
+    padding: 5px 0px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.card-category-items p {
+	font-size: 11px;
+	font-weight: 500;
+	margin: 0;
+}
+ 
